fixed alignment issues in header top

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ body{
 .header .top{
     flex: 1;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
     font-weight: 800;
     font-size: 1.5em;
